[package]
name = "tikv-client"
version = "0.0.0"
keywords = ["TiKV", "KV", "distributed-systems"]
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Official TiKV Client & API bindings."
edition = "2018"

[features]
default = []
# Enable the `tikv-client` binary.
cli = [
    "clap",
    "env_logger",
    "failure/backtrace",
]
# Enable integration tests with a running TiKV and PD instance.
# Use $PD_ADDRS, comma separated, to set the addresses the tests use. 
integration-tests = []

[lib]
name = "tikv_client"

[[bin]]
name = "tikv-client"
path = "src/client/main.rs"
required-features = ["cli"]

[dependencies]
derive-new = "0.5"
clap = { version = "2.33", optional = true }
env_logger = { version = "0.6.1", optional = true }
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }
grpcio = { version = "0.5.0-alpha", features = [ "secure", "prost-codec" ], default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", rev = "81e0c4635c2e28462fa0ad82c39f126448976de7", features = [ "prost-codec" ], default-features = false }
lazy_static = "1"
log = "0.3.9"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
tokio-timer = "0.2"

[dependencies.prometheus]
version = "0.4.2"
default-features = false
features = ["push", "process"]

[dev-dependencies]
tempdir = "0.3"
runtime = { version = "0.3.0-alpha.6", default-features = false }
runtime-tokio = "0.3.0-alpha.5"
proptest = "0.9"
proptest-derive = "0.1.0"
